--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
+    compile group: 'asm', name: 'asm', version: '3.3.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
