--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile group: 'asm', name: 'asm', version: '3.3.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
