--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,18 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 
 //noinspection GroovyUnusedAssignment
-sourceCompatibility = 1.5
+sourceCompatibility = 1.7
 
 repositories {
-    mavenCentral()
+    //mavenCentral()
+    maven {
+        //url "http://inch-forge.skyguide.corp/artifactory/repos"
+        url "http://156.135.81.68/artifactory/repos"
+    }
 }
 
 dependencies {
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile group: 'asm', name: 'asm', version: '3.3.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'commons-io', name: 'commons-io', version: '2.5'
 }
